# NATS-WebUI

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: datatypes.rs  main.rs  sql.rs
web/: package-lock.json
web/src/: App.vue
web/src/components/: Client.vue  ServerList.vue
