[package]
name = "nats-webui"
version = "0.2.0"
authors = ["Theodore Lee <sphqxelzlt@gmail.com>", "Jens Thiel <thielj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.37.0"

tokio = { version = "1.41.0", features = ["full"] }
warp = "0.3"
log = "0.4"
simple_logger="5.0"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
reqwest = { version = "0.12.8", features = ["json"] }
rusqlite = "0.21"
serde_json = "1.0"
http = "0.2"
futures-util = "0.3"
futures = "0.3"
